--- a/Author.macOS/packages.config
+++ b/Author.macOS/packages.config
@@ -2,29 +2,20 @@
 <packages>
   <package id="Acr.UserDialogs" version="7.0.4" targetFramework="xamarinmac20" />
   <package id="Behaviors.Forms" version="1.4.0" targetFramework="xamarinmac20" />
-  <package id="Microsoft.NETCore.Platforms" version="2.2.1" targetFramework="xamarinmac20" />
-  <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.NETCore.Platforms" version="2.2.2" targetFramework="xamarinmac20" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="xamarinmac20" />
   <package id="SshNet.Security.Cryptography" version="1.3.0" targetFramework="xamarinmac20" />
   <package id="System.AppContext" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.Collections" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.Console" version="4.3.1" targetFramework="xamarinmac20" />
-  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="xamarinmac20" />
-  <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="xamarinmac20" />
-  <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.Globalization" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.IO" version="4.3.0" targetFramework="xamarinmac20" />
-  <package id="System.IO.Compression" version="4.3.0" targetFramework="xamarinmac20" />
-  <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.Linq" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="xamarinmac20" />
-  <package id="System.Net.Http" version="4.3.4" targetFramework="xamarinmac20" />
-  <package id="System.Net.Primitives" version="4.3.1" targetFramework="xamarinmac20" />
-  <package id="System.Net.Sockets" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="xamarinmac20" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.Reflection" version="4.3.0" targetFramework="xamarinmac20" />
@@ -40,15 +31,13 @@
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="xamarinmac20" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="xamarinmac20" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="xamarinmac20" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="xamarinmac20" />
   <package id="System.Threading" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="xamarinmac20" />
-  <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="xamarinmac20" />
-  <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinmac20" />
-  <package id="Xamarin.Essentials" version="1.1.0" targetFramework="xamarinmac20" />
-  <package id="Xamarin.Forms" version="4.0.0.425677" targetFramework="xamarinmac20" />
+  <package id="Xamarin.Essentials" version="1.3.0" targetFramework="xamarinmac20" />
+  <package id="Xamarin.Forms" version="4.2.0.709249" targetFramework="xamarinmac20" />
+  <package id="Xamarin.Plugin.FilePicker" version="2.1.18" targetFramework="xamarinmac20" />
 </packages>
